# django-skeleton

./: .env.docker  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
accounts/: admin.py  apps.py  models.py  serializers.py  token_manager.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_managers.py
config/: settings.py  urls.py
middleware/: __init__.py  auth.py  logging.py  security.py
scripts/: dev.sh
templates/: dashboard.html
templates/accounts/: dashboard.html  login.html
